<resources>
    <string name="label_andes_specs">Andes Specs 📘</string>
    <string name="andes_message_title">Atention! 👇</string>
    <string name="body_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="title_description">Atention! 👇</string>
    <string name="dismissable">Dismissable</string>
    <string name="title_text">Atention!</string>
    <string name="andes_message_showcase_change">Update</string>
    <string name="change_text">Title text</string>
    <string name="change_body">Body text</string>
    <string name="andesui_demoapp_clear_button">Clear</string>
    <string name="andesui_demoapp_error_tracking">Current Activity could not be tracked. Add component and screens entries to AnalyticsHelper.</string>
    <string-array name="hierarchy_spinner">
        <item>Quiet</item>
        <item>Loud</item>
    </string-array>
    <string-array name="simple_type_spinner">
        <item>Neutral</item>
        <item>Highlight</item>
        <item>Success</item>
        <item>Warning</item>
        <item>Error</item>
    </string-array>
    <string-array name="size_spinner">
        <item>Large</item>
        <item>Small</item>
    </string-array>
    <string name="andes_demoapp_screen_tooltip">Andes UI: Tooltip</string>
    <string name="andes_demoapp_screen_button">Andes UI: Button</string>
    <string name="andes_demoapp_screen_bottom_sheet">Andes UI: Bottom Sheet</string>
    <string name="andes_demoapp_screen_message">Andes UI: Message</string>
    <string name="andes_demoapp_screen_badge">Andes UI: Badge</string>
    <string name="andes_demoapp_screen_tag">Andes UI: Tag</string>
    <string name="andes_demoapp_screen_list">Andes UI: List</string>
    <string name="andes_demoapp_screen_dropdown">Andes UI: Dropdown</string>
    <string name="andes_demoapp_screen_checkbox">Andes UI: Checkbox</string>
    <string name="andes_demoapp_screen_carousel">Andes UI: Carousel</string>
    <string name="andes_demoapp_screen_card">Andes UI: Card</string>
    <string name="andes_demoapp_screen_snackbar">Andes UI: Snackbar</string>
    <string name="andes_demoapp_screen_coachmark">Andes UI: Coachmark</string>
    <string name="andes_demoapp_screen_radiobutton">Andes UI: RadioButton</string>
    <string name="andes_demoapp_screen_datepicker">Andes UI: DatePicker</string>
    <string name="andes_demoapp_screen_thumbnail">Andes UI: Thumbnail</string>
    <string name="andes_demoapp_screen_progress_indicator">Andes UI: Progress Indicator</string>
    <string name="andes_demoapp_screen_whatsnew">Andes UI: What\'s new?</string>
    <string name="andes_demoapp_changelog_error">What\'s New couldn\'t be loaded, please contact our support team.</string>
    <string name="andes_demoapp_label_showcase">Showcase</string>
    <string name="andes_demoapp_label_whatsnew_title">Hey! Check the What\'s New!</string>
    <string name="andes_demoapp_label_whatsnew_body">There you can see what are the things we\'ve been working on 😃</string>
    <string name="andes_demoapp_label_corner">Corner</string>
    <string name="andes_demoapp_label_rounded">Rounded</string>
    <string name="andes_demoapp_label_standard">Standard</string>
    <string name="andes_demoapp_label_more">More</string>
    <string name="andes_demoapp_whatsnew_main_action">View What\'s New</string>
    <string name="andes_demoapp_label_andes_contribution">I want to contribute 🤝</string>
    <string name="andes_badge_specs">Andes Badge Specs 📘</string>
    <string name="andes_badge_description">Badges are small units of information that allow you to indicate the state of an element or differentiate several similar elements from each other.</string>
    <string name="andes_badge_modifier">Modifier</string>
    <string name="andes_badge_hierarchy">Hierarchy</string>
    <string name="andes_badge_type">Type</string>
    <string name="andes_badge_size">Size</string>
    <string name="andes_badge_border">Border</string>
    <string name="andes_badge_text">Demo</string>
    <string name="andes_badge_pill">Pill</string>
    <string name="andes_badge_other">Other cases</string>
    <string name="andes_badge_dot">Dot</string>
    <string name="andes_badge_error">error</string>
    <string name="andes_badge_warning">warning</string>
    <string name="andes_badge_success">success</string>
    <string name="andes_badge_highlight">highlight</string>
    <string name="andes_badge_neutral">neutral</string>
    <string name="andes_badge_showcase">Andes Badge</string>
    <string name="andes_badge_loud_badges_text">Hierarchy: Loud</string>
    <string name="andes_badge_quiet_badges_text">Hierarchy: Quiet</string>
    <string-array name="andes_badge_modifier_spinner">
        <item>Pill</item>
        <item>Dot</item>
    </string-array>
    <string name="andes_button_specs">Andes Button Specs 📘</string>
    <string name="andes_button_hierarchy">Hierarchy</string>
    <string name="andes_button_enabled">Enabled</string>
    <string name="andes_button_size">Size</string>
    <string name="andes_button_is_loading">Is loading</string>
    <string name="andes_button_text">Text</string>
    <string name="andes_button">Andes button</string>
    <string name="andes_button_loud">Loud buttons</string>
    <string name="andes_button_loud_drawable">Loud large with drawable</string>
    <string name="andes_button_loud_large_disabled">Loud large button disabled</string>
    <string name="andes_button_loud_large">Loud large button</string>
    <string name="andes_button_loud_large_with_loading">Loud large button with loading</string>
    <string name="andes_button_loud_medium">Loud medium button</string>
    <string name="andes_button_loud_small">Loud small button</string>
    <string name="andes_button_quiet">Quiet buttons</string>
    <string name="andes_button_quiet_drawable">Quiet large with drawable</string>
    <string name="andes_button_quiet_large_disabled">Quiet large button disabled</string>
    <string name="andes_button_quiet_large">Quiet large button</string>
    <string name="andes_button_quiet_medium">Quiet medium button</string>
    <string name="andes_button_quiet_medium_with_loading">Quiet medium button with loading</string>
    <string name="andes_button_quiet_small">Quiet small button</string>
    <string name="andes_button_transparent">Transparent buttons</string>
    <string name="andes_button_transparent_drawable">Transparent large with drawable</string>
    <string name="andes_button_transparent_large_disabled">Transparent large button disabled</string>
    <string name="andes_button_transparent_large">Transparent large button</string>
    <string name="andes_button_transparent_medium">Transparent medium button</string>
    <string name="andes_button_transparent_small">Transparent small button</string>
    <string name="andes_button_transparent_small_with_loading">Transparent small button with loading</string>
    <string name="andes_button_description">The buttons allow you to carry out the main and secondary actions of a screen.\nThey are applied in different places in the UI such as cards, manners and forms.</string>
    <string-array name="andes_button_size_spinner">
        <item>Large</item>
        <item>Medium</item>
        <item>Small</item>
    </string-array>
    <string-array name="andes_button_hierarchy_spinner">
        <item>Loud</item>
        <item>Quiet</item>
        <item>Transparent</item>
    </string-array>
    <string name="andes_bottom_sheet">Andes Bottom Sheet</string>
    <string name="andes_bottom_sheet_attach_view_button">Attach View</string>
    <string name="andes_bottom_sheet_attach_frag_butotn">Attach Fragment</string>
    <string name="andes_bottom_sheet_toggle_title_button">Toggle Title</string>
    <string name="andes_bottom_sheet_toggle_title_align_button">Toggle alignment</string>
    <string name="andes_bottom_sheet_text_field">New peek height</string>
    <string name="andes_bottom_sheet_set_button">Set</string>
    <string name="andes_bottom_sheet_dummy_view">This is a dummy view</string>
    <string name="andes_card_specs">Andes Card Specs 📘</string>
    <string name="andes_card_type">Type</string>
    <string name="andes_card_style">Style</string>
    <string name="andes_card_padding">Padding</string>
    <string name="andes_card_body_padding">BodyPadding</string>
    <string name="andes_card_hierarchy">Hierarchy</string>
    <string name="andes_card_title">Title</string>
    <string name="andes_card_link">Link</string>
    <string name="andes_card_showcase">Andes Card</string>
    <string name="andes_card_example_1">Andes card with title, style elevated, hierarchy primary, type warning, padding small and with action link.</string>
    <string name="andes_card_example_2">Andes card with title, hierarchy secondary and padding small.</string>
    <string name="andes_card_example_3">Andes card with title, style outline, hierarchy primary, type none, padding medium and with action link.</string>
    <string name="andes_card_example_4">Andes card without title, style outline, hierarchy primary, type highlight, padding small and without action link.</string>
    <string name="andes_card_example_5">Andes card with title, hierarchy secondary_dark and padding medium.</string>
    <string-array name="andes_card_type_spinner">
        <item>None</item>
        <item>Highlight</item>
        <item>Error</item>
        <item>Success</item>
        <item>Warning</item>
    </string-array>
    <string-array name="andes_card_style_spinner">
        <item>Elevated</item>
        <item>Outline</item>
    </string-array>
    <string-array name="andes_card_padding_spinner">
        <item>None</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
    </string-array>
    <string-array name="andes_card_body_padding_spinner">
        <item>None</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>XLarge</item>
    </string-array>
    <string-array name="andes_card_hierarchy_spinner">
        <item>Primary</item>
        <item>Secondary</item>
        <item>Secondary dark</item>
    </string-array>
    <string name="andes_carousel_specs">Andes Carousel Specs 📘</string>
    <string name="andes_carousel_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="andes_carousel_centered">Carousel snapped</string>
    <string name="andes_carousel_not_centered">Carousel free</string>
    <string name="andes_carousel_title">Example</string>
    <string name="andes_carousel_description">Groups and manipulates a horizontal sequence of content.</string>
    <string name="andes_carousel_showcase">Andes Carousel</string>
    <string name="andes_carousel_margin">Margin</string>
    <string name="andes_carousel_center">Center</string>
    <string name="andes_carousel_scrolling">Carousel started scrolling</string>
    <string name="andes_textfield_specs">Andes TextField Specs 📘</string>
    <string name="andes_textfield_name">Nombre</string>
    <string name="andes_textfield_name_ex">Juan Pérez</string>
    <string name="andes_textfield_help">Helper text</string>
    <string name="andes_textfield_error">Revisá este dato.</string>
    <string name="andes_textfield_dni">Como figura en el DNI</string>
    <string name="andes_textfield_pass">Contraseña</string>
    <string name="andes_textfield_disabled">Textfield disabled</string>
    <string name="andes_textfield_helpr_message">Textfield disabled</string>
    <string name="andes_textarea_title">TextArea</string>
    <string name="andes_textarea_title_read_only">TextArea read only</string>
    <string name="andes_textarea_title_disabled">TextArea disabled</string>
    <string name="andes_textarea_title_error">TextArea error</string>
</resources>